2008-04-14 Og Maciel <ogmaciel@gnome.org>

    * categoriesdialog.py: Ask user for confirmation before editing an existing category.
    Patch sent by Laudeci Oliveira.

2008-04-13 Og Maciel <ogmaciel@gnome.org>

	* adddialog.py
	* maindialog.py
	* categoriesdialog.py: It is no longer needed to parse color field prior
	to calling lib/utils.create_pixbuf method.

2008-04-04 Og Maciel <ogmaciel@gnome.org>

    * categoriesdialog.py: Simplify the code; automatically select a newly 
	created category. (ref: http://code.google.com/p/billreminder/issues/detail?id=2)
    * adddialog.py: Expect a category dictionary from categoriesdialog.py.

2008-04-03 Og Maciel <ogmaciel@gnome.org>

    * categoriesdialog.py: Don't allow an existing category to be added.
    * adddialog.py: Only set the alarm if it is specified in the user's preferences.
	(ref: http://code.google.com/p/billreminder/issues/detail?id=1)

2008-03-23 Og Maciel <ogmaciel@gnome.org>

    * categoriesdialog.py: Display categories by category name in ascending order.
    * adddialog.py: Display category colored icon to the left of the category name 
	in the combobox. This was a patch sent by Laudeci Oliveira which I fine tweaked.

2008-03-09 Og Maciel <ogmaciel@gnome.org>

    * maindialog.py: Convert selectedDate from calendar to a datatime object prior
	to passing it to adddialog.py.
    * adddialog.py: Make sure that alarmbutton has its date set based on passed 
	on due date; Set category to None by default on new records.

2008-03-08 Og Maciel <ogmaciel@gnome.org>

    * adddialog.py: Added optional selectedDate parameter to be used to pre-populate
	calendar with passed date object when adding new record. (ref: sourceforge #1906715)
    * maindialog.py: Removed unused _get_date method and added method to calendar
	that allows user to add a new record by double-clicking on a selected date.
	(ref: sourceforge #1906715)